@@ -74,46 +74,7 @@ class MRCustomJobLauncher(MRJobLauncher):
                           action='append', default=[])
 
 
-# used to test old options() hooks
-class MRDeprecatedCustomJobLauncher(MRJobLauncher):
-
-    def configure_options(self):
-        super(MRDeprecatedCustomJobLauncher, self).configure_options()
-
-        # type='int' should become type=int
-        self.add_passthrough_option(
-            '--foo-size', '-F', type='int', dest='foo_size', default=5,
-            help='default is %default')
-        # don't need to translate *type* if it's already a type (see #2058)
-        self.add_passthrough_option(
-            '--bar-size', '-B', type=int, dest='bar_size', default=2)
-        # 'choice' isn't a type in argparse, do we translate it correctly?
-        self.add_passthrough_option(
-            '--pill-type', '-T', type='choice', choices=(['red', 'blue']),
-            default='blue')
-
-        # test 'str' alias for 'string' type (see #1857)
-        self.add_passthrough_option('--word', '-w', type='str', default=None)
-
-        self.pass_through_option('--runner')
-
-        self.add_file_option('--accordian-file', dest='accordian_files',
-                             action='append', default=[])
-
-        # regression test for #1858
-        self.add_file_option('--foo-db', dest='foo_db', type='string')
-
-        # regression test for #2058
-        self.add_file_option('--bar-db', dest='bar_db', type=str)
-
-    def load_options(self, args):
-        super(MRDeprecatedCustomJobLauncher, self).load_options(args)
-
-        self._load_options_args = args
-
-
 ### Test cases ###
-
 
 class RunJobTestCase(SandboxedTestCase):
 
@@ -459,76 +420,3 @@ class StdStreamTestCase(BasicTestCase):
             self.assertEqual(launcher.stdin, mock_stdin.buffer)
             self.assertEqual(launcher.stdout, mock_stdout)
             self.assertEqual(launcher.stderr, mock_stderr)
-
-
-class DeprecatedOptionHooksTestCase(SandboxedTestCase):
-
-    def setUp(self):
-        super(DeprecatedOptionHooksTestCase, self).setUp()
-
-        self.start(patch('mrjob.launch.log'))
-
-    def test_load_options(self):
-        mr_job = MRDeprecatedCustomJobLauncher(args=['', '-r', 'local'])
-
-        self.assertEqual(mr_job._load_options_args, ['', '-r', 'local'])
-
-    def test_add_passthrough_option(self):
-        mr_job = MRDeprecatedCustomJobLauncher(
-            args=['', '-F', '6', '-B', '4', '-T', 'red', '--word', 'bird'])
-
-        self.assertEqual(mr_job.options.foo_size, 6)
-        self.assertEqual(mr_job.options.bar_size, 4)
-        self.assertEqual(mr_job.options.pill_type, 'red')
-        self.assertEqual(mr_job.options.word, 'bird')
-
-        self.assertEqual(mr_job._non_option_kwargs()['extra_args'],
-                         ['-F', '6', '-B', '4', '-T', 'red', '--word', 'bird'])
-
-    def test_add_file_option(self):
-        mr_job = MRDeprecatedCustomJobLauncher(
-            args=['',
-                  '--accordian-file', 'WeirdAl.mp3',
-                  '--accordian-file', '/home/dave/JohnLinnell.ogg',
-                  '--foo-db', '/var/foo.db',
-                  '--bar-db', '/var/bar.db',
-                  ])
-
-        self.assertEqual(
-            mr_job.options.accordian_files, [
-                'WeirdAl.mp3', '/home/dave/JohnLinnell.ogg'])
-
-        self.assertEqual(mr_job.options.foo_db, '/var/foo.db')
-
-        self.assertEqual(mr_job.options.bar_db, '/var/bar.db')
-
-        self.assertEqual(mr_job._non_option_kwargs()['extra_args'], [
-            '--accordian-file', dict(
-                path='WeirdAl.mp3', name=None, type='file'),
-            '--accordian-file', dict(
-                path='/home/dave/JohnLinnell.ogg', name=None, type='file'),
-            '--foo-db', dict(
-                path='/var/foo.db', name=None, type='file'),
-            '--bar-db', dict(
-                path='/var/bar.db', name=None, type='file'),
-        ])
-
-    def test_pass_through_option_method(self):
-        mr_job = MRDeprecatedCustomJobLauncher(
-            args=['', '-r', 'local'])
-
-        self.assertEqual(mr_job.options.runner, 'local')
-
-        self.assertEqual(mr_job._non_option_kwargs()['extra_args'],
-                         ['-r', 'local'])
-
-    def test_args_property(self):
-        # argparse expects all positional args to be together
-        mr_job = MRDeprecatedCustomJobLauncher(
-            args=['-F', '6', '', 'input1.txt', 'input2.txt'])
-        self.assertEqual(mr_job.args, ['input1.txt', 'input2.txt'])
-
-    def test_help_compatibility(self):
-        mr_job = MRDeprecatedCustomJobLauncher(args=[''])
-
-        self.assertIn('default is 5', mr_job.arg_parser.format_help())
