@@ -9,6 +9,15 @@ v0.7.0, 2019-10-?? -- fall cleaning
    * --archive, --dir, --file, --hadoop-arg, --libjar, --py-file, --spark-arg
    * removed MRJob.parse_output_line()
    * removed runner.stream_output()
+   * optparse simulation:
+     * add_file_option()
+     * add_passthrough_option()
+     * configure_options()
+     * load_options()
+     * pass_through_option()
+     * self.args
+     * self.OPTION_CLASS
+     * mrjob.util.parse_and_save_options()
 
 v0.6.12, 2019-10-23 -- unbreak Google
  * default image_version on Dataproc is now 1.3 (#2110)
